--- a/src/rf_costmap/CMakeLists.txt
+++ b/src/rf_costmap/CMakeLists.txt
@@ -27,6 +27,8 @@ endif()
 
 add_library(${PROJECT_NAME} SHARED
   src/costmap_2d.cc
+  src/layer.cc
+  src/costmap_layer.cc
 )
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
