--- a/idl/rf_robot_msgs/CMakeLists.txt
+++ b/idl/rf_robot_msgs/CMakeLists.txt
@@ -9,12 +9,18 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Empty.msg"
+  "msg/CostmapMetaData.msg"
+  "msg/Costmap.msg"
   "srv/Add.srv"
-  DEPENDENCIES builtin_interfaces std_msgs
+  DEPENDENCIES
+  builtin_interfaces
+  std_msgs
+  geometry_msgs
 )
 
 if(BUILD_TESTING)
