--- a/src/rf_costmap/CMakeLists.txt
+++ b/src/rf_costmap/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(nav_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(tf2_sensor_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -35,6 +37,7 @@ add_library(${PROJECT_NAME} SHARED
   src/static_layer.cc
   src/costmap_interface.cc
   src/costmap_publisher.cc
+  src/observation_buffer.cc
 )
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -49,6 +52,8 @@ ament_target_dependencies(${PROJECT_NAME}
   tf2
   geometry_msgs
   tf2_geometry_msgs
+  sensor_msgs
+  tf2_sensor_msgs
 )
 
 install(
@@ -75,6 +80,8 @@ ament_export_dependencies(
   tf2
   geometry_msgs
   tf2_geometry_msgs
+  sensor_msgs
+  tf2_sensor_msgs
 )
 
 ament_package()
