--- a/src/rf_costmap/package.xml
+++ b/src/rf_costmap/package.xml
@@ -17,6 +17,8 @@
   <depend>tf2</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2_sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
