ENH: local&global map

--- a/src/rf_global_planner/CMakeLists.txt
+++ b/src/rf_global_planner/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(rf_robot_msgs)
+project(rf_global_planner)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,26 +7,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(builtin_interfaces REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Empty.msg"
-  "msg/CostmapMetaData.msg"
-  "msg/Costmap.msg"
-  "srv/Add.srv"
-  "srv/DumpMap.srv"
-  "srv/GetMap.srv"
-  "srv/ReqAck.srv"
-  DEPENDENCIES
-  builtin_interfaces
-  std_msgs
-  geometry_msgs
-  nav_msgs
-)
+find_package(rf_robot_msgs REQUIRED)
+find_package(elog REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
