--- a/src/rf_local_map/CMakeLists.txt
+++ b/src/rf_local_map/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(rf_example_node)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+project(rf_local_map)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -12,10 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rf_robot_msgs REQUIRED)
 find_package(elog REQUIRED)
-find_package(rf_util REQUIRED)
 find_package(rf_costmap REQUIRED)
-find_package(tf2 REQUIRED)
-find_package(tf2_geometry_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -29,24 +23,40 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-add_executable(rf_example_node src/main.cc)
+add_library(${PROJECT_NAME} SHARED
+  src/local_map_node.cc
+)
 
-target_include_directories(rf_example_node PUBLIC
+target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
 
-ament_target_dependencies(rf_example_node
+ament_target_dependencies(${PROJECT_NAME}
   rf_robot_msgs
   elog
-  rf_util
   rf_costmap
-  tf2
-  tf2_geometry_msgs
 )
 
-install(TARGETS rf_example_node
-  DESTINATION lib/${PROJECT_NAME}
+install(
+  TARGETS ${PROJECT_NAME}
+  EXPORT export_${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+install(
+  DIRECTORY include/
+  DESTINATION include
+)
+
+ament_export_include_directories(include)
+ament_export_targets(export_${PROJECT_NAME})
+ament_export_dependencies(
+  rf_robot_msgs
+  elog
+  rf_costmap
 )
 
 ament_package()
