--- a/src/rf_scheduler_node/package.xml
+++ b/src/rf_scheduler_node/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>rf_main</name>
+  <name>rf_scheduler_node</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="fanxiaodong@buaa.edu.cn">royfan</maintainer>
@@ -11,11 +11,7 @@
 
   <depend>rf_robot_msgs</depend>
   <depend>elog</depend>
-  <depend>rf_global_map</depend>
-  <depend>rf_local_map</depend>
-  <depend>rf_global_planner</depend>
-  <depend>rf_map_manager</depend>
-  <depend>rf_scheduler_node</depend>
+  <depend>rf_util</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
